# Mastering-Data-Structures-and-Algorithms

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.sh  conanfile.py
benchmark/: CMakeLists.txt  benchmarking.hpp
src/: CMakeLists.txt
src/algorithms/: CMakeLists.txt  backtracking.hpp  bin-sort.hpp  binary-search.hpp  bubble-sort.hpp  combination.hpp  count-sort.hpp  delete-duplicates.hpp  difference-elements.hpp  divide-and-conquer.hpp  insert-sort.hpp  intersection-elements.hpp  is-sorted.hpp  linear-search.hpp  max-element.hpp  merge-elements.hpp  optimization-problems-dp.hpp  optimization-problems-gm.hpp  parentheses-matching.hpp  permutation.hpp  quick-sort.hpp  radix-sort.hpp  reverse-elements.hpp  rotate-elements.hpp  selection-sort.hpp  shift-elements.hpp  union-elements.hpp  useful-concepts.hpp
src/data-structures/: CMakeLists.txt  avl-binary-search-tree.hpp  binary-search-tree.hpp  binary-tree.hpp  diagonal-matrix.hpp  disjoint-set.hpp  dynamic-array.hpp  graph.hpp  heap.hpp  list.hpp  lower-triangular-matrix.hpp  matrix.hpp  queue.hpp  rb-binary-search-tree.hpp  sparse-matrix.hpp  stack.hpp  static-array.hpp  symmetric-matrix.hpp  unordered-map.hpp
src/recursion/: CMakeLists.txt
src/recursion/combination/: CMakeLists.txt  README.md  main.cpp
src/recursion/combination/docs/: combination.drawio
src/recursion/e-taylor/: CMakeLists.txt  README.md  main.cpp
src/recursion/e-taylor/docs/: e_taylor.drawio
src/recursion/fibonacci/: CMakeLists.txt  README.md  main.cpp
src/recursion/fibonacci/docs/: fibonacci.drawio
src/recursion/pow/: CMakeLists.txt  README.md  main.cpp
src/recursion/pow/docs/: pow.drawio
src/recursion/sum-of-natural-numbers/: CMakeLists.txt  README.md  main.cpp
src/recursion/sum-of-natural-numbers/docs/: sum_n_numbers.drawio
src/recursion/tower-of-hanoi/: CMakeLists.txt  README.md  main.cpp
src/student-challenges/: 1.finding-missing-element.hpp  2.finding-duplicate-elements.hpp  3.finding-pair-with-sum-k.hpp  CMakeLists.txt
tests/: CMakeLists.txt
tests/algorithms/: CMakeLists.txt  backtracking-tests.cpp  combination-tests.cpp  delete-duplicates-tests.cpp  difference-elements-tests.cpp  divide-and-conquer-tests.cpp  intersection-elements-tests.cpp  is-sorted-tests.cpp  max-element-tests.cpp  merge-elements-tests.cpp  optimization-problems-dp-tests.cpp  optimization-problems-gm-tests.cpp  parentheses-matching-tests.cpp  permutation-tests.cpp  reverse-elements-tests.cpp  rotate-elements-tests.cpp  search-algorithms-tests.cpp  shift-elements-tests.cpp  sorting-tests.cpp  union-elements-tests.cpp
tests/data-structures/: CMakeLists.txt  avl-binary-search-tree-tests.cpp  binary-search-tree-tests.cpp  binary-tree-tests.cpp  diagonal-matrix-tests.cpp  dynamic-array-tests.cpp  graph-representation-tests.cpp  heap-tests.cpp  list-tests.cpp  lower-triangular-matrix-tests.cpp  queue-tests.cpp  rb-binary-search-tree-tests.cpp  sparse-matrix-tests.cpp  stack-tests.cpp  static-array-tests.cpp  symmetric-matrix-tests.cpp  unordered-map-tests.cpp
tests/student-challenges/: 1.finding-missing-element-tests.cpp  2.finding-duplicate-elements-tests.cpp  3.finding-pair-with-sum-k-tests.cpp  CMakeLists.txt
