# topics/recursion/CMakeLists.txt

# Add e-taylor directory
add_subdirectory(e-taylor)

# Add pow directory
add_subdirectory(pow)

# Add sum-of-natural-numbers directory
add_subdirectory(sum-of-natural-numbers) 

# Add fibonacci directory
add_subdirectory(fibonacci) 

# Add combination directory
add_subdirectory(combination)

# Add tower of hanoi directory
add_subdirectory(tower-of-hanoi) 